Import latest version of yaSSL  - Replace SawTooth copyright header with MySQL's  - Bug#19209 Test 'rpl_openssl' hangs on Windows  - Spurious "2013 Connection to server lost" errors fixed    yaSSL doesn't close socket anymore, that is left to the application